# dojo-plant

./: .gitignore  Dojo_ML_Detection_plants.ipynb  Pipfile  README.md  compute.py  crop.py  dataload.py  images-preprocessing.ipynb  main.ipynb  main.py  notebook.ipynb  pyproject.toml  training-pipeline-dojo.ipynb  training-pipeline-mac.ipynb  training-pipeline.ipynb
clients/: main.dart
clients/flutter/: .metadata  README.md  pubspec.yaml
clients/flutter/ios/: Podfile
clients/flutter/lib/: BorderPainter.dart  main.dart
clients/flutter/test/: widget_test.dart
clients/flutter_app/: .env  pubspec.yaml
clients/flutter_app/lib/: AppDrawer.dart  globals.dart  main.dart
clients/flutter_app/test/: widget_test.dart
clients/web/: package-lock.json  package.json
clients/web/config/: webpack.dev.js
clients/web/src/: index.js  template.html
data/dataset/other/: ratios.json  stats.json
data/dojo/: training-pipeline-dojo.ipynb
data/dojo/modules/: crop_tqdm.py  dataload.py
models/: download  models.md
modules/: crop.py  dataload.py  model.py  training.py
notebook/: .gitignore  docker-compose.yml
notebook/data/: training-pipeline-mac.ipynb
notebook/data/modules/: training.py
notebook/data/scripts/: prepare_dataset.py
notebook/src/: training-pipeline.ipynb
notebook/src/modules/: model.py
scripts/: .gitignore  benchmark.py  imageprocessing.py  requirements.txt
scripts/benchmark/: benchmark.py  imageprocessing.py  requirements.txt  template.html  utils.py
scripts/plantnet/: plantnet.py
test-models/: Untitled.ipynb
(+28 files in other folders)
