[project]
name = "dojo-plant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=0.30.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "opencv-python>=4.11.0.86",
    "pillow>=11.1.0",
    "sam-2",
    "torch>=2.6.0",
]

[tool.uv.sources]
sam-2 = { path = "sam2" }
